--- a/src/pages/etica.html
+++ b/src/pages/etica.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,12 +11,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <style>
         .video-container {
             position: relative;
         }
+
         .video-overlay {
             position: absolute;
             top: 0;
@@ -29,18 +32,22 @@
             opacity: 0;
             transition: opacity 0.3s ease-in-out;
         }
+
         .video-container:hover .video-overlay {
             opacity: 1;
         }
     </style>
 </head>
+
 <body class="font-haken bg-gray-100 py-0">
 
     <header class="bg-gradient-to-r from-teal-500 to-orange-500 text-white py-4 shadow-lg">
         <nav class="container mx-auto flex justify-between items-center px-10">
             <div class="flex items-center gap-4">
                 <a href="../../index.html">
-                    <img class="w-12 cursor-pointer" src="https://uptecamac.edomex.gob.mx/sites/uptecamac.edomex.gob.mx/files/images/logo%20upt.png" alt="Logo">
+                    <img class="w-12 cursor-pointer"
+                        src="https://uptecamac.edomex.gob.mx/sites/uptecamac.edomex.gob.mx/files/images/logo%20upt.png"
+                        alt="Logo">
                 </a>
                 <h1 class="text-3xl font-bold">Universidad Politecnica de Tecámac</h1>
             </div>
@@ -59,71 +66,98 @@
     </header>
 
     <section class="container mx-auto mt-12 p-6 bg-white rounded-xl shadow-2xl md:flex md:max-w-6xl">
-        <article class="video-container bg-gradient-to-b from-teal-500 to-orange-500 text-white p-10 rounded-xl text-center md:w-1/2 flex flex-col justify-center items-center">
+        <article
+            class="video-container bg-gradient-to-b from-teal-500 to-orange-500 text-white p-10 rounded-xl text-center md:w-1/2 flex flex-col justify-center items-center">
             <h2 class="text-2xl font-bold mb-4">Más Información</h2>
             <div class="video-overlay">
-            <iframe src="https://www.youtube.com/embed/mIuJt-mqhlY?si=Pj692SMRqY0Jpp6q&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="w-full h-64 md:h-80 rounded-lg"></iframe>
+                <iframe src="https://www.youtube.com/embed/mIuJt-mqhlY?si=Pj692SMRqY0Jpp6q&amp;controls=0"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
+                    class="w-full h-64 md:h-80 rounded-lg"></iframe>
         </article>
 
         <article class="p-10 grid gap-6 md:w-1/2">
             <h3 class="text-xl font-bold">Ética Informática</h3>
-            
+
             <p class="ml-auto text-dark-gray-blue text-justify">
-                Muchos autores también se han interesado por saber qué es la ética informática. Entre algunos tenemos: Mario González Arencibia, quien la define como una disciplina analiza los problemas éticos que genera la tecnología informática. Para Terrel Bynum, quien afirma que la ética informática es una disciplina que identifica y analiza el impacto de las tecnologías en los valores humanos y sociales, lo que implica un dilema moral por parte de las personas que manejan dicha tecnologías. Los dilemas éticos resaltan los riesgos asociados al uso de tecnologías, como engaño, creación de perfiles falsos para cometer estafas, invasión de la privacidad de otros, entre otros.
+                Muchos autores también se han interesado por saber qué es la ética informática. Entre algunos tenemos:
+                Mario González Arencibia, quien la define como una disciplina analiza los problemas éticos que genera la
+                tecnología informática. Para Terrel Bynum, quien afirma que la ética informática es una disciplina que
+                identifica y analiza el impacto de las tecnologías en los valores humanos y sociales, lo que implica un
+                dilema moral por parte de las personas que manejan dicha tecnologías. Los dilemas éticos resaltan los
+                riesgos asociados al uso de tecnologías, como engaño, creación de perfiles falsos para cometer estafas,
+                invasión de la privacidad de otros, entre otros.
             </p>
 
             <p class="font-bold text-dark-gray-blue">
                 Objetivos de la Ética Informática:
             </p>
             <ul class="list-disc list-inside ml-auto text-dark-gray-blue text-justify">
-                <li>Descubrir dilemas éticos.</li><br/>
-                <li>Determinar la medida en que estos dilemas son creados por la tecnología.</li><br/>
-                <li>Integridad: Mantener la exactitud y confiabilidad de la información.</li><br/>
-                <li>Formular principios de actuación para hacer frente a las nuevas actividades que provoca la informática y, en las que no se perciben con claridad sus líneas de actuación.</li><br/>
-                <li>Aplicar la teoría ética para esclarecer los dilemas éticos.</li><br/>
+                <li>Descubrir dilemas éticos.</li><br />
+                <li>Determinar la medida en que estos dilemas son creados por la tecnología.</li><br />
+                <li>Integridad: Mantener la exactitud y confiabilidad de la información.</li><br />
+                <li>Formular principios de actuación para hacer frente a las nuevas actividades que provoca la
+                    informática y, en las que no se perciben con claridad sus líneas de actuación.</li><br />
+                <li>Aplicar la teoría ética para esclarecer los dilemas éticos.</li><br />
             </ul>
 
             <div class="bg-light-blue/5 rounded-xl flex py-1 px- items-center">
                 <p class="ml-3 text-lime-800 text-lg">Delitos Informáticos</p>
             </div>
             <p class="ml-auto text-dark-gray-blue text-justify">
-                Bajo la denominación de "delito informático", "ciberdelito" o "delito telemático” se encuadran los hechos que de alguna forma tienen dos componentes básicos: existencia de delito y uso de la informática. El delito informático se define como el acto delictivo en el que se hace uso de la informática para su comisión, bien sea como medio o como fin del mismo o como fin del mismo.
+                Bajo la denominación de "delito informático", "ciberdelito" o "delito telemático” se encuadran los
+                hechos que de alguna forma tienen dos componentes básicos: existencia de delito y uso de la informática.
+                El delito informático se define como el acto delictivo en el que se hace uso de la informática para su
+                comisión, bien sea como medio o como fin del mismo o como fin del mismo.
             </p>
             <p class="font-bold text-dark-gray-blue">
                 Tipos Comunes de Delitos Informáticos:
             </p>
             <ul class="list-disc list-inside ml-auto text-dark-gray-blue text-justify">
-                <li><strong>Phishing:</strong> Técnica de fraude en línea que engaña a los usuarios para que revelen información personal y financiera.</li><br/>
-                <li><strong>Malware:</strong> Software malicioso diseñado para infiltrarse y dañar sistemas informáticos sin el consentimiento del propietario.</li><br/>
-                <li><strong>Hacking:</strong> Acceso no autorizado a sistemas informáticos para robar, modificar o destruir datos.</li><br/>
-                <li><strong>Robo de Identidad:</strong> Uso no autorizado de la información personal de otra persona para cometer fraudes o delitos.</li><br/>
-                <li><strong>Fraude Informático:</strong> Manipulación de datos o sistemas informáticos para obtener beneficios financieros.</li><br/>
+                <li><strong>Phishing:</strong> Técnica de fraude en línea que engaña a los usuarios para que revelen
+                    información personal y financiera.</li><br />
+                <li><strong>Malware:</strong> Software malicioso diseñado para infiltrarse y dañar sistemas informáticos
+                    sin el consentimiento del propietario.</li><br />
+                <li><strong>Hacking:</strong> Acceso no autorizado a sistemas informáticos para robar, modificar o
+                    destruir datos.</li><br />
+                <li><strong>Robo de Identidad:</strong> Uso no autorizado de la información personal de otra persona
+                    para cometer fraudes o delitos.</li><br />
+                <li><strong>Fraude Informático:</strong> Manipulación de datos o sistemas informáticos para obtener
+                    beneficios financieros.</li><br />
             </ul>
 
             <div class="bg-light-blue rounded-xl flex py-1 px-6 items-center">
                 <p class="ml-3 text-lime-800 text-lg">Regulación de Delitos Informáticos en México</p>
             </div>
             <p class="ml-auto font-bold text-dark-gray-blue text-justify">
-                En México, desde 1999, existe legislación federal para sancionar delitos informáticos en México, que afectan principalmente al sector financiero. Las organizaciones víctimas pueden enfrentar desde interrupciones y pérdidas de datos o dinero, hasta daños reputacionales. Incluso, en algunos casos, consecuencias legales.
+                En México, desde 1999, existe legislación federal para sancionar delitos informáticos en México, que
+                afectan principalmente al sector financiero. Las organizaciones víctimas pueden enfrentar desde
+                interrupciones y pérdidas de datos o dinero, hasta daños reputacionales. Incluso, en algunos casos,
+                consecuencias legales.
             </p>
             <p class="font-bold text-dark-gray-blue">
                 Medidas Legislativas:
             </p>
             <ul class="list-disc list-inside ml-auto text-dark-gray-blue text-justify">
-                <li><strong>Actualización de Códigos Penales:</strong> Reformas que permiten la inclusión de delitos informáticos específicos.</li><br/>
-                <li><strong>Colaboración Internacional:</strong> Participación en tratados y acuerdos internacionales para armonizar leyes y mejorar las técnicas de investigación.</li><br/>
-                <li><strong>Capacitación de Cuerpos Policiales:</strong> Especialización de policías y fiscales en la investigación y persecución de ciberdelitos​.</li><br/>
+                <li><strong>Actualización de Códigos Penales:</strong> Reformas que permiten la inclusión de delitos
+                    informáticos específicos.</li><br />
+                <li><strong>Colaboración Internacional:</strong> Participación en tratados y acuerdos internacionales
+                    para armonizar leyes y mejorar las técnicas de investigación.</li><br />
+                <li><strong>Capacitación de Cuerpos Policiales:</strong> Especialización de policías y fiscales en la
+                    investigación y persecución de ciberdelitos​.</li><br />
             </ul>
-            
+
         </article>
     </section>
 
     <script>
         const navLinks = document.querySelector('.nav-links')
-        function onToggleMenu(e){
+        function onToggleMenu(e) {
             e.name = e.name === 'menu' ? 'close' : 'menu'
             navLinks.classList.toggle('top-[9%]')
         }
     </script>
 </body>
+
 </html>
