--- a/src/pages/procesos.html
+++ b/src/pages/procesos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,12 +11,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/estilos.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <style>
         .video-container {
             position: relative;
         }
+
         .video-overlay {
             position: absolute;
             top: 0;
@@ -29,18 +32,22 @@
             opacity: 0;
             transition: opacity 0.3s ease-in-out;
         }
+
         .video-container:hover .video-overlay {
             opacity: 1;
         }
     </style>
 </head>
+
 <body class="font-haken bg-gray-100 py-0">
 
     <header class="bg-gradient-to-r from-purple-500 to-teal-500 text-white py-4 shadow-lg">
         <nav class="container mx-auto flex justify-between items-center px-10">
             <div class="flex items-center gap-4">
                 <a href="../../index.html">
-                    <img class="w-12 cursor-pointer" src="https://uptecamac.edomex.gob.mx/sites/uptecamac.edomex.gob.mx/files/images/logo%20upt.png" alt="Logo">
+                    <img class="w-12 cursor-pointer"
+                        src="https://uptecamac.edomex.gob.mx/sites/uptecamac.edomex.gob.mx/files/images/logo%20upt.png"
+                        alt="Logo">
                 </a>
                 <h1 class="text-3xl font-bold">Universidad Politecnica de Tecámac</h1>
             </div>
@@ -59,16 +66,22 @@
     </header>
 
     <section class="container mx-auto mt-12 p-6 bg-white rounded-xl shadow-2xl md:flex md:max-w-6xl">
-        <article class="video-container bg-gradient-to-b from-purple-500 to-teal-500 text-white p-10 rounded-xl text-center md:w-1/2 flex flex-col justify-center items-center">
+        <article
+            class="video-container bg-gradient-to-b from-purple-500 to-teal-500 text-white p-10 rounded-xl text-center md:w-1/2 flex flex-col justify-center items-center">
             <h2 class="text-2xl font-bold mb-4">Más Información</h2>
             <div class="video-overlay">
-            <iframe src="https://www.youtube.com/embed/VpZJ-KTJaxo?si=jBX0Zqa495WuLlAm&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="w-full h-64 md:h-80 rounded-lg"></iframe>
+                <iframe src="https://www.youtube.com/embed/VpZJ-KTJaxo?si=jBX0Zqa495WuLlAm&amp;controls=0"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
+                    class="w-full h-64 md:h-80 rounded-lg"></iframe>
         </article>
 
         <article class="p-10 grid gap-6 md:w-1/2">
             <h3 class="text-xl font-bold">Procesos</h3>
             <div class="bg-light-blue/5 rounded-xl flex py-1 px-6 items-center">
-                <p class="text-light-red text-lg">Proceso de trámite de registro de obras ante la institución de derechos de autor</p>
+                <p class="text-light-red text-lg">Proceso de trámite de registro de obras ante la institución de
+                    derechos de autor</p>
             </div>
 
             <p class="font-bold text-dark-gray-blue">
@@ -76,33 +89,47 @@
             </p>
 
             <ul class="list-disc list-inside ml-auto text-dark-gray-blue text-justify">
-                <li><strong>Solicitud:</strong> Completar y presentar la solicitud de registro, especificando el tipo de obra y proporcionando la información requerida sobre el autor y la obra.</li><br/>
-                <li><strong>Revisión:</strong> El <strong>INDAUTOR</strong> revisara la solicitud y su respectiva documentación presentada para poder verificar su cumplimiento con los requisitos legales.</li><br/>
-                <li><strong>Pago de derechos:</strong> Realizar el pago de los derechos correspondientes, cuyo monto dependera del tipo de obra y el trámite a realizar.</li><br/>
-                <li><strong>Certificado de registro:</strong> Si la solicitud es aprobada, el <strong>INDAUTOR</strong> emitira un certificado de registro, el cual otorgara la protección legal a la obra y sus derechos de autor.</li><br/>
+                <li><strong>Solicitud:</strong> Completar y presentar la solicitud de registro, especificando el tipo de
+                    obra y proporcionando la información requerida sobre el autor y la obra.</li><br />
+                <li><strong>Revisión:</strong> El <strong>INDAUTOR</strong> revisara la solicitud y su respectiva
+                    documentación presentada para poder verificar su cumplimiento con los requisitos legales.</li><br />
+                <li><strong>Pago de derechos:</strong> Realizar el pago de los derechos correspondientes, cuyo monto
+                    dependera del tipo de obra y el trámite a realizar.</li><br />
+                <li><strong>Certificado de registro:</strong> Si la solicitud es aprobada, el <strong>INDAUTOR</strong>
+                    emitira un certificado de registro, el cual otorgara la protección legal a la obra y sus derechos de
+                    autor.</li><br />
             </ul>
 
             <p class="ml-auto font-bold text-dark-gray-blue text-justify">
-                Este proceso garantiza que los derechos de autor sean reconocidos y protegidos legalmente, permitiendo a los autores ejercer sus derechos sobre sus respectivas obras.
+                Este proceso garantiza que los derechos de autor sean reconocidos y protegidos legalmente, permitiendo a
+                los autores ejercer sus derechos sobre sus respectivas obras.
             </p>
 
             <div class="bg-light-blue/5 rounded-xl flex py-1 px-6 items-center">
                 <p class="text-purple-800 text-lg">Proceso de elaboración de avisos de privacidad</p>
             </div>
             <p class="ml-auto font-bold text-dark-gray-blue text-justify">
-                El aviso de privacidad es un documento mas que fundamental el cual informa a los titulares de datos personales sobre cómo se recopilará, usará, almacenará y protegerá su información. Los elementos clave de un aviso de privacidad suelen incluir:
+                El aviso de privacidad es un documento mas que fundamental el cual informa a los titulares de datos
+                personales sobre cómo se recopilará, usará, almacenará y protegerá su información. Los elementos clave
+                de un aviso de privacidad suelen incluir:
             </p>
 
             <ul class="list-disc list-inside ml-auto text-dark-gray-blue">
-                <li><strong>Identidad del responsable:</strong> Información sobre la entidad o persona responsable del tratamiento de los datos personales.</li>
-                <li><strong>Finalidades del tratamiento:</strong> Descripción clara de los propósitos para los cuales se recolectarán y utilizarán los datos personales.</li>
-                <li><strong>Derechos ARCO:</strong> Información sobre los derechos de los titulares de los datos (Acceso, Rectificación, Cancelación y Oposición) y cómo pueden ejercerlos.</li>
-                <li><strong>Transferencias de datos:</strong> Información sobre si los datos personales serán transferidos a terceros, y en su caso, a quiénes y con qué finalidad.</li>
-                <li><strong>Transferencias de datos:</strong> Información sobre si los datos personales serán transferidos a terceros, y en su caso, a quiénes y con qué finalidad.</li>
+                <li><strong>Identidad del responsable:</strong> Información sobre la entidad o persona responsable del
+                    tratamiento de los datos personales.</li>
+                <li><strong>Finalidades del tratamiento:</strong> Descripción clara de los propósitos para los cuales se
+                    recolectarán y utilizarán los datos personales.</li>
+                <li><strong>Derechos ARCO:</strong> Información sobre los derechos de los titulares de los datos
+                    (Acceso, Rectificación, Cancelación y Oposición) y cómo pueden ejercerlos.</li>
+                <li><strong>Transferencias de datos:</strong> Información sobre si los datos personales serán
+                    transferidos a terceros, y en su caso, a quiénes y con qué finalidad.</li>
+                <li><strong>Transferencias de datos:</strong> Información sobre si los datos personales serán
+                    transferidos a terceros, y en su caso, a quiénes y con qué finalidad.</li>
             </ul>
 
             <p class="ml-auto font-bold text-dark-gray-blue text-justify">
-                El aviso de privacidad debe ser accesible para los titulares de los datos y debe proporcionarse de manera clara y comprensible, preferiblemente en el momento de la recolección de los datos.
+                El aviso de privacidad debe ser accesible para los titulares de los datos y debe proporcionarse de
+                manera clara y comprensible, preferiblemente en el momento de la recolección de los datos.
             </p>
 
         </article>
@@ -110,10 +137,11 @@
 
     <script>
         const navLinks = document.querySelector('.nav-links')
-        function onToggleMenu(e){
+        function onToggleMenu(e) {
             e.name = e.name === 'menu' ? 'close' : 'menu'
             navLinks.classList.toggle('top-[9%]')
         }
     </script>
 </body>
+
 </html>
