--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,16 +10,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@400;700;800&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 </head>
+
 <body class="font-poppins bg-gray-50">
 
     <header class="bg-gradient-to-r from-indigo-600 to-blue-500 text-white py-4 shadow-lg">
         <nav class="container mx-auto flex justify-between items-center px-10">
             <div class="flex items-center gap-4">
                 <a href="index.html">
-                    <img class="w-20 cursor-pointer" src="https://uptecamac.edomex.gob.mx/sites/uptecamac.edomex.gob.mx/files/images/logo%20upt.png" alt="Logo">
+                    <img class="w-20 cursor-pointer"
+                        src="https://uptecamac.edomex.gob.mx/sites/uptecamac.edomex.gob.mx/files/images/logo%20upt.png"
+                        alt="Logo">
                 </a>
                 <h1 class="text-3xl font-bold">Universidad Politecnica de Tecámac</h1>
             </div>
@@ -53,7 +58,8 @@
                 <h2 class="text-2xl font-bold mb-4">Universidad Politécnica de Tecámac</h2>
                 <p class="text-lg font-semibold">Ingeniería en Software</p>
                 <p class="mt-2">Seguridad de la Información</p>
-                <div class="w-32 h-32 bg-white rounded-full mx-auto my-8 flex items-center justify-center md:w-40 md:h-40">
+                <div
+                    class="w-32 h-32 bg-white rounded-full mx-auto my-8 flex items-center justify-center md:w-40 md:h-40">
                     <img src="src/assets/software.png" alt="UPTecámac Logo">
                 </div>
                 <p class="font-semibold">Profesor: Néstor Apolo López González</p>
@@ -64,23 +70,41 @@
                 <div class="space-y-6">
                     <div class="p-6 border-l-4 border-red-500 bg-red-50 rounded-lg shadow">
                         <h4 class="text-2xl font-semibold text-red-600">Legislación Informática</h4>
-                        <p class="mt-2 text-gray-700">En esta sección se presentan los conceptos fundamentales relacionados con los derechos de autor, la privacidad y la protección de datos. Se define qué son los derechos de autor, cómo protegen las obras de los creadores y se exploran los aspectos básicos de la privacidad y la importancia de la protección de los datos personales en la era digital.</p>
+                        <p class="mt-2 text-gray-700">Este se refiere a los acuerdos y las leyes aprobadas qué regulan el uso de la información que se encuentra en la internet, dispositivos electrónicos y cualquiera de los medios digitales junto con los delitos que se cometen por el uso indebido de estos, además....</p>
+                        <br><p class="text-1xl font-semibold text-red-600 underline"><a href="src/pages/legislacion.html">Leer más</a></p>
                     </div>
                     <div class="p-6 border-l-4 border-yellow-500 bg-yellow-50 rounded-lg shadow">
                         <h4 class="text-2xl font-semibold text-yellow-700">Leyes</h4>
-                        <p class="mt-2 text-gray-700">Esta sección aborda las leyes que rigen los derechos de autor, la privacidad y la protección de datos tanto a nivel nacional como internacional. Se examinan las normativas más relevantes y su aplicación en diferentes jurisdicciones, proporcionando un panorama amplio del marco legal existente.</p>
+                        <p class="mt-2 text-gray-700">En México, el derecho a la protección de datos está regulado por
+                            diversas normas dependiendo del área de que se trate. En cuanto a el
+                            sector privado, tenemos la Ley Federal de Protección de Datos
+                            Personales de los Particulares, mientras que en el sector existe la
+                            Ley...</p>
+                            <br><p class="text-1xl font-semibold text-yellow-600 underline"><a href="src/pages/leyes.html">Leer más</a></p>
                     </div>
                     <div class="p-6 border-l-4 border-green-500 bg-green-50 rounded-lg shadow">
                         <h4 class="text-2xl font-semibold text-green-700">Procesos</h4>
-                        <p class="mt-2 text-gray-700">Aquí se detalla el procedimiento específico para llevar a cabo el registro de una obra ante la institución de derechos de autor, incluyendo la documentación requerida y los pasos a seguir desde la presentación hasta la obtención del registro.</p>
+                        <p class="mt-2 text-gray-700">El aviso de privacidad es un documento mas que fundamental el cual informa a los titulares de datos personales sobre cómo se recopilará, usará, almacenará y protegerá su información. Los elementos clave de un aviso de privacidad suelen incluir:<br>
+                        <strong>Identidad del responsable:</strong> Información sobre la entid...</p>
+                            <br><p class="text-1xl font-semibold text-green-600 underline"><a href="src/pages/procesos.html">Leer más</a></p>
                     </div>
                     <div class="p-6 border-l-4 border-blue-500 bg-blue-50 rounded-lg shadow">
                         <h4 class="text-2xl font-semibold text-blue-700">Ética</h4>
-                        <p class="mt-2 text-gray-700">Esta sección introduce los conceptos básicos de la ética informática y los delitos informáticos. Se define qué se entiende por ética en el contexto de la informática y se describen los diferentes tipos de delitos informáticos que pueden ocurrir.</p>
+                        <p class="mt-2 text-gray-700">Muchos autores también se han interesado por saber qué es la ética informática. Entre algunos tenemos:<br>
+                            Mario González Arencibia, quien la define como una disciplina analiza los problemas éticos que genera la
+                            tecnología informática. Para Terrel Bynum, quien afirma que la ética informática es una disciplina que
+                            identifica y analiza el impacto de las tecnologías en los valores...</p>
+                            <br><p class="text-1xl font-semibold text-blue-600 underline"><a href="src/pages/etica.html">Leer más</a></p>
                     </div>
                     <div class="p-6 border-l-4 border-purple-500 bg-purple-50 rounded-lg shadow">
                         <h4 class="text-2xl font-semibold text-purple-700">Características</h4>
-                        <p class="mt-2 text-gray-700">Se examinan las características específicas de los delitos informáticos que están tipificados en las leyes mexicanas, proporcionando ejemplos y explicaciones detalladas de cada tipo de delito.</p>
+                        <p class="mt-2 text-gray-700">En forma general segun el poder judicial, las principales características que revisten los Delitos informáticos son:<br>
+                            <Strong>Criminógenas de cuello blanco.<br></Strong>
+                            <ul class="list-disc ml-auto mt-2 text-gray-700">
+                            <li>Son acciones ocupacionales, en cuanto que muchas veces se realizan cuando el sujeto se halla trabajando.</li>
+                            <li>Son acciones de oportunidad, en cuanto a que se aprovecha una ocasión creada o altamente intensificada en el mundo de funciones y organizaciones del sistema</li></p>
+                        </ul>
+                        <br><p class="text-1xl font-semibold text-purple-600 underline"><a href="src/pages/caracteristicas.html">Leer más</a></p>
                     </div>
                 </div>
             </article>
@@ -125,4 +149,5 @@
         const analytics = getAnalytics(app);
     </script>
 </body>
+
 </html>
