finalizado (ahora si)(ya de a debis)

--- a/src/pages/conclusiones.html
+++ b/src/pages/conclusiones.html
@@ -65,41 +65,45 @@
         class="bg-gradient-to-b from-blue-500 to-violet-500 rounded-b-2xl p-10 text-white text-center md:rounded-2xl md:w-1/2 md:grid md:content-center"
       >
         <p class="text-2xl mb-2 font-bold">Referencias</p>
-        <ul
-          class="list-disc list-inside font-bold text-white-gray-blue"
-        >
+        <ul class="list-disc list-inside font-bold text-white-gray-blue">
           <li>
+            Euroinnova Business School. (n.d.). ¿Qué es la ética informática? Recuperado de
             <a
               href="https://www.euroinnova.com/blog/que-es-la-etica-informatica#objetivos-de-la-etica-informatica"
               target="_blank"
-              >¿Qué es la legislación informática?</a
+              >https://www.euroinnova.com/blog/que-es-la-etica-informatica#objetivos-de-la-etica-informatica</a
             >
           </li>
           <li>
-           <a
+            Scielo México. (2023). ¿Qué es la ética informática? Recuperado de
+            <a
               href="https://www.scielo.org.mx/scielo.php?script=sci_arttext&pid=S2007-36072023000100005"
               target="_blank"
-              >¿Qué es la etica informática?</a
+              >https://www.scielo.org.mx/scielo.php?script=sci_arttext&pid=S2007-36072023000100005</a
             >
           </li>
           <li>
+            INAI. (n.d.). Leyes en México para la protección de datos personales. Recuperado de
             <a href="https://micrositios.inai.org.mx/marcocompetencias/?page_id=370" target="_blank"
-              >Leyes en México para la protección de datos personales</a
+              >https://micrositios.inai.org.mx/marcocompetencias/?page_id=370</a
             >
           </li>
           <li>
+            Ertzaintza. (n.d.). ¿Qué es el delito informático? Recuperado de
             <a href="https://www.ertzaintza.euskadi.eus/lfr/web/ertzaintza/que-es-el-delito-informatico" target="_blank"
-              >¿Qué es el delito informático?</a
+              >https://www.ertzaintza.euskadi.eus/lfr/web/ertzaintza/que-es-el-delito-informatico</a
             >
           </li>
           <li>
+            IT Masters Mag. (n.d.). Delitos informáticos en México: las leyes y las multas. Recuperado de
             <a href="https://www.itmastersmag.com/ciberseguridad/delitos-informaticos-en-mexico-que-dice-la-ley/#:~:text=Desde%201999%2C%20existe%20legislación%20federal,en%20algunos%20casos%2C%20consecuencias%20legales." target="_blank"
-              >Delitos informáticos en México: las leyes y las multas</a
+              >https://www.itmastersmag.com/ciberseguridad/delitos-informaticos-en-mexico-que-dice-la-ley/#:~:text=Desde%201999%2C%20existe%20legislación%20federal,en%20algunos%20casos%2C%20consecuencias%20legales.</a
             >
           </li>
           <li>
+            Poder Judicial Michoacán. (n.d.). Características y clasificación de los delitos. Recuperado de
             <a href="https://www.poderjudicialmichoacan.gob.mx/tribunalm/biblioteca/almadelia/Cap3.htm#:~:text=En%20forma%20general%2C%20las%20principales,el%20sujeto%20se%20halla%20trabajando." target="_blank"
-              >CARACTERISTICAS Y CLASIFICACION DE LOS DELITOS</a
+              >https://www.poderjudicialmichoacan.gob.mx/tribunalm/biblioteca/almadelia/Cap3.htm#:~:text=En%20forma%20general%2C%20las%20principales,el%20sujeto%20se%20halla%20trabajando.</a
             >
           </li>
         </ul>
