--- a/src/pages/conclusiones.html
+++ b/src/pages/conclusiones.html
@@ -61,54 +61,6 @@
     <section
       class="w-[90%] min-w-md mx-auto bg-white shadow-2xl md:flex md:rounded-2xl md:max-w-4xl mt-8"
     >
-      <article
-        class="bg-gradient-to-b from-blue-500 to-violet-500 rounded-b-2xl p-10 text-white text-center md:rounded-2xl md:w-1/2 md:grid md:content-center"
-      >
-        <p class="text-2xl mb-2 font-bold">Referencias</p>
-        <ul class="list-disc list-inside font-bold text-white-gray-blue">
-          <li>
-            Euroinnova Business School. (n.d.). ¿Qué es la ética informática? Recuperado de
-            <a
-              href="https://www.euroinnova.com/blog/que-es-la-etica-informatica#objetivos-de-la-etica-informatica"
-              target="_blank"
-              >https://www.euroinnova.com/blog/que-es-la-etica-informatica#objetivos-de-la-etica-informatica</a
-            >
-          </li>
-          <li>
-            Scielo México. (2023). ¿Qué es la ética informática? Recuperado de
-            <a
-              href="https://www.scielo.org.mx/scielo.php?script=sci_arttext&pid=S2007-36072023000100005"
-              target="_blank"
-              >https://www.scielo.org.mx/scielo.php?script=sci_arttext&pid=S2007-36072023000100005</a
-            >
-          </li>
-          <li>
-            INAI. (n.d.). Leyes en México para la protección de datos personales. Recuperado de
-            <a href="https://micrositios.inai.org.mx/marcocompetencias/?page_id=370" target="_blank"
-              >https://micrositios.inai.org.mx/marcocompetencias/?page_id=370</a
-            >
-          </li>
-          <li>
-            Ertzaintza. (n.d.). ¿Qué es el delito informático? Recuperado de
-            <a href="https://www.ertzaintza.euskadi.eus/lfr/web/ertzaintza/que-es-el-delito-informatico" target="_blank"
-              >https://www.ertzaintza.euskadi.eus/lfr/web/ertzaintza/que-es-el-delito-informatico</a
-            >
-          </li>
-          <li>
-            IT Masters Mag. (n.d.). Delitos informáticos en México: las leyes y las multas. Recuperado de
-            <a href="https://www.itmastersmag.com/ciberseguridad/delitos-informaticos-en-mexico-que-dice-la-ley/#:~:text=Desde%201999%2C%20existe%20legislación%20federal,en%20algunos%20casos%2C%20consecuencias%20legales." target="_blank"
-              >https://www.itmastersmag.com/ciberseguridad/delitos-informaticos-en-mexico-que-dice-la-ley/#:~:text=Desde%201999%2C%20existe%20legislación%20federal,en%20algunos%20casos%2C%20consecuencias%20legales.</a
-            >
-          </li>
-          <li>
-            Poder Judicial Michoacán. (n.d.). Características y clasificación de los delitos. Recuperado de
-            <a href="https://www.poderjudicialmichoacan.gob.mx/tribunalm/biblioteca/almadelia/Cap3.htm#:~:text=En%20forma%20general%2C%20las%20principales,el%20sujeto%20se%20halla%20trabajando." target="_blank"
-              >https://www.poderjudicialmichoacan.gob.mx/tribunalm/biblioteca/almadelia/Cap3.htm#:~:text=En%20forma%20general%2C%20las%20principales,el%20sujeto%20se%20halla%20trabajando.</a
-            >
-          </li>
-        </ul>
-      </article>
-
       <article class="p-10 grid gap-6 md:w-1/2">
         <h3 class="text-xl font-bold">Conclusiones</h3>
         <p class="ml-auto text-dark-gray-blue text-justify">
@@ -135,22 +87,6 @@
           <p class="text-purple-800 text-lg">Ética Informática:</p>
         </div>
         <p class="text-dark-gray-blue text-justify">
-          La ética informática se centra en los principios y normas que guían el
-          comportamiento responsable en el uso de las tecnologías de la
-          información. En un mundo cada vez más dependiente de la tecnología, la
-          ética informática se convierte en una disciplina esencial para
-          asegurar que los profesionales de TI actúen con responsabilidad y
-          respeto hacia los usuarios y sus datos. Los principios de privacidad,
-          confidencialidad, integridad, responsabilidad y transparencia son
-          fundamentales para construir un entorno digital seguro y confiable.
-          Estos principios ayudan a prevenir abusos y a fomentar una cultura de
-          respeto y responsabilidad en el manejo de la información.
-        </p>
-
-        <div class="bg-light-blue/5 rounded-xl flex py-1 px-6 items-center">
-          <p class="text-blue-800 text-lg">Ética Informática:</p>
-        </div>
-        <p class="ml-auto text-dark-gray-blue text-justify">
           La ética informática se centra en los principios y normas que guían el
           comportamiento responsable en el uso de las tecnologías de la
           información. En un mundo cada vez más dependiente de la tecnología, la
@@ -215,13 +151,71 @@
           diaria y profesional.
         </p>
       </article>
-    </section>
 
+      <article
+        class="bg-gradient-to-b from-blue-500 to-violet-500 rounded-b-2xl text-white text-center md:rounded-2xl md:w-1/2 md:grid md:content-center"
+      >
+        <div class="p-6 overflow-auto max-h-screen">
+          <p class="text-2xl mb-2 font-bold">Referencias</p>
+          <div class="text-white text-center">
+            <ul class="list-disc list-inside font-bold text-white">
+              <li>
+                Euroinnova Business School. (n.d.). ¿Qué es la ética informática? Recuperado de
+                <a
+                  href="https://www.euroinnova.com/blog/que-es-la-etica-informatica#objetivos-de-la-etica-informatica"
+                  target="_blank"
+                  >https://www.euroinnova.com/blog/que-es-la-etica-informatica#objetivos-de-la-etica-informatica</a
+                >
+              </li>
+              <li>
+                Scielo México. (2023). ¿Qué es la ética informática? Recuperado de
+                <a
+                  href="https://www.scielo.org.mx/scielo.php?script=sci_arttext&pid=S2007-36072023000100005"
+                  target="_blank"
+                  >https://www.scielo.org.mx/scielo.php?script=sci_arttext&pid=S2007-36072023000100005</a
+                >
+              </li>
+              <li>
+                INAI. (n.d.). Leyes en México para la protección de datos personales. Recuperado de
+                <a
+                  href="https://micrositios.inai.org.mx/marcocompetencias/?page_id=370"
+                  target="_blank"
+                  >https://micrositios.inai.org.mx/marcocompetencias/?page_id=370</a
+                >
+              </li>
+              <li>
+                Ertzaintza. (n.d.). ¿Qué es el delito informático? Recuperado de
+                <a
+                  href="https://www.ertzaintza.euskadi.eus/lfr/web/ertzaintza/que-es-el-delito-informatico"
+                  target="_blank"
+                  >https://www.ertzaintza.euskadi.eus/lfr/web/ertzaintza/que-es-el-delito-informatico</a
+                >
+              </li>
+              <li>
+                IT Masters Mag. (n.d.). Delitos informáticos en México: las leyes y las multas. Recuperado de
+                <a
+                  href="https://www.itmastersmag.com/ciberseguridad/delitos-informaticos-en-mexico-que-dice-la-ley"
+                  target="_blank"
+                  >https://www.itmastersmag.com/ciberseguridad/delitos-informaticos-en-mexico-que-dice-la-ley</a
+                >
+              </li>
+              <li>
+                Poder Judicial Michoacán. (n.d.). Características y clasificación de los delitos. Recuperado de
+                <a
+                  href="https://www.poderjudicialmichoacan.gob.mx/tribunalm/biblioteca/almaedia/Cap3.htm#"
+                  target="_blank"
+                  >https://www.poderjudicialmichoacan.gob.mx/tribunalm/biblioteca/almaedia/Cap3.htm#</a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </article>
+    </section>
     <script>
-      const navLinks = document.querySelector(".nav-links");
-      function onToggleMenu(e) {
-        e.name = e.name === "menu" ? "close" : "menu";
-        navLinks.classList.toggle("top-[9%]");
+      function onToggleMenu(icon) {
+        const menu = document.querySelector('.nav-links');
+        menu.classList.toggle('hidden');
       }
     </script>
   </body>
