finalizado (ahora si)(ya de a debis)(ahora si ya de huevos)(que yaaaaaaaaaaa)

--- a/src/pages/conclusiones.html
+++ b/src/pages/conclusiones.html
@@ -58,6 +58,17 @@
       </nav>
     </header>
 
+    <div class="mobile-menu hidden bg-white shadow-md fixed inset-0 z-50 p-6 md:hidden">
+      <nav class="flex flex-col items-start gap-4">
+          <a class="hover:text-purple-600" href="./legislacion.html">Legislación</a>
+          <a class="hover:text-purple-600" href="./leyes.html">Leyes</a>
+          <a class="hover:text-purple-600" href="./procesos.html">Procesos</a>
+          <a class="hover:text-purple-600" href="./etica.html">Ética</a>
+          <a class="hover:text-purple-600" href="./caracteristicas.html">Características</a>
+          <a class="hover:text-purple-600" href="./conclusiones.html">Conclusiones</a>
+      </nav>
+  </div>
+
     <section
       class="w-[90%] min-w-md mx-auto bg-white shadow-2xl md:flex md:rounded-2xl md:max-w-4xl mt-8"
     >
