--- a/src/pages/etica.html
+++ b/src/pages/etica.html
@@ -65,6 +65,17 @@
         </nav>
     </header>
 
+    <div class="mobile-menu hidden bg-white shadow-md fixed inset-0 z-50 p-6 md:hidden">
+        <nav class="flex flex-col items-start gap-4">
+            <a class="hover:text-purple-600" href="./legislacion.html">Legislación</a>
+            <a class="hover:text-purple-600" href="./leyes.html">Leyes</a>
+            <a class="hover:text-purple-600" href="./procesos.html">Procesos</a>
+            <a class="hover:text-purple-600" href="./etica.html">Ética</a>
+            <a class="hover:text-purple-600" href="./caracteristicas.html">Características</a>
+            <a class="hover:text-purple-600" href="./conclusiones.html">Conclusiones</a>
+        </nav>
+    </div>
+
     <section class="container mx-auto mt-12 p-6 bg-white rounded-xl shadow-2xl md:flex md:max-w-6xl">
         <article
             class="video-container bg-gradient-to-b from-teal-500 to-orange-500 text-white p-10 rounded-xl text-center md:w-1/2 flex flex-col justify-center items-center">
