finalizado (ahora si)(ya de a debis)(ahora si ya de huevos)(que yaaaaaaaaaaa)(simon, ya)

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <h4 class="text-2xl font-semibold text-purple-700">Características</h4>
                         <p class="mt-2 text-gray-700">En forma general segun el poder judicial, las principales características que revisten los Delitos informáticos son:<br>
                             <Strong>Criminógenas de cuello blanco.<br></Strong>
-                            <ul class="list-disc ml-auto mt-2 text-gray-700">
+                            <ul class="list-disc ml-auto text-gray">
                             <li>Son acciones ocupacionales, en cuanto que muchas veces se realizan cuando el sujeto se halla trabajando.</li>
                             <li>Son acciones de oportunidad, en cuanto a que se aprovecha una ocasión creada o altamente intensificada en el mundo de funciones y organizaciones del sistema</li></p>
                         </ul>
