--- a/src/pages/etica.html
+++ b/src/pages/etica.html
@@ -163,11 +163,12 @@
     </section>
 
     <script>
-        const navLinks = document.querySelector('.nav-links')
+const navLinks = document.querySelector('.mobile-menu');
         function onToggleMenu(e) {
-            e.name = e.name === 'menu' ? 'close' : 'menu'
-            navLinks.classList.toggle('top-[9%]')
+            e.name = e.name === 'menu' ? 'close' : 'menu';
+            navLinks.classList.toggle('hidden');
         }
+
     </script>
 </body>
 
