--- a/src/pages/caracteristicas.html
+++ b/src/pages/caracteristicas.html
@@ -245,11 +245,12 @@
     </section>
 
     <script>
-      const navLinks = document.querySelector(".nav-links");
-      function onToggleMenu(e) {
-        e.name = e.name === "menu" ? "close" : "menu";
-        navLinks.classList.toggle("top-[9%]");
-      }
+const navLinks = document.querySelector('.mobile-menu');
+        function onToggleMenu(e) {
+            e.name = e.name === 'menu' ? 'close' : 'menu';
+            navLinks.classList.toggle('hidden');
+        }
+
     </script>
   </body>
 </html>
